<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rasprover_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dwilliestyle@gmail.com">don</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>json</depend>
  <depend>queue</depend>
  <depend>threading</depend>
  <depend>time</depend>
  <depend>subprocess</depend>
  <depend>os</depend>

  <exec_depend>rasprover_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
